Verif/Test/Invalide/test_erreur_3.93.deca
// Description:
//    Programme soulevant l'erreur (3.93)
// Resultats:
//    Erreur contextuelle
//    Ligne 17 : Objet attendu à gauche de '.' (règle 3.93)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012



int y;
int a;
{
 y = a.x();
} 